/**
 * # Token Revoke KYC
 * Revoke "KYC" status from an account with respect to a token.
 *
 * The "KYC' property is named for the "Know Your Customer" requirements in
 * US federal regulations (FINRA 2090 and related US Code) that was subsequently
 * incorporated into laws and regulations for many worldwide jurisdictions.
 * The process requires a regulated financial entity to positively identify
 * customers and certain other entities.
 *
 * This transaction enables a token administrator to track whether KYC
 * requirements are met for a given account transacting in that token.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package proto;

/*
 * Copyright (C) 2018-2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.hapi.node.token">>> This comment is special code for setting PBJ Compiler java package

import "basic_types.proto";

/**
 * Revoke "Know Your Customer"(KYC) from one account for a single token.
 *
 * This transaction MUST be signed by the `kyc_key` for the token.<br/>
 * The identified token MUST have a `kyc_key` set to a valid `Key` value.<br/>
 * The token `kyc_key` MUST NOT be an empty `KeyList`.<br/>
 * The identified token MUST exist and MUST NOT be deleted.<br/>
 * The identified account MUST exist and MUST NOT be deleted.<br/>
 * The identified account MUST have an association to the identified token.<br/>
 * On success the association between the identified account and the identified
 * token SHALL NOT be marked as "KYC granted".
 *
 * ### Block Stream Effects
 * None
 */
message TokenRevokeKycTransactionBody {
    /**
     * A token identifier.
     * <p>
     * The identified token SHALL revoke "KYC" for the account
     * identified by the `account` field.<br/>
     * The identified token MUST be associated to the account identified
     * by the `account` field.
     */
    TokenID token = 1;

    /**
     * An account identifier.
     * <p>
     * The token identified by the `token` field SHALL revoke "KYC" for the
     * identified account.<br/>
     * This account MUST be associated to the token identified
     * by the `token` field.
     */
    AccountID account = 2;
}
